# app-runner

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  README.md  build.sh  pom.xml  sample-config.properties  sample-repo-list.txt
.github/workflows/: ci.yaml  release.yaml
app-runner/: pom.xml
app-runner-lib/: pom.xml
app-runner-lib/src/test/: openapi2.json  openapi3.json
local/: config.properties  logback.xml  start.bat  start.sh  stop.sh  test.keystore
sample-apps/dotnet/: Program.cs  Startup.cs  WeatherForecast.cs  dotnet-sample.csproj  global.json
sample-apps/dotnet/Controllers/: HomeController.cs  ValuesController.cs  WeatherForecastController.cs
sample-apps/dotnet/Properties/: launchSettings.json
sample-apps/dotnet/Views/Home/: Index.cshtml
sample-apps/golang/: hello.go  hello_test.go
sample-apps/golang-mod/: go.mod  hello.go
sample-apps/gradle/: .gitignore  build.gradle  settings.gradle
sample-apps/lein/: .gitignore  README.md  project.clj
sample-apps/lein/resources/public/: sample.txt
sample-apps/lein/src/leinapp/: core.clj
sample-apps/lein/test/leinapp/: core_test.clj
sample-apps/maven/: pom.xml
sample-apps/nodejs/: README.md  package.json  server.js
sample-apps/python2/: server2.py
sample-apps/python3/: server3.py
sample-apps/rust/: Cargo.toml
sample-apps/rust/src/: main.rs
sample-apps/sbt/: .gitignore  README.md  build.sbt
src/main/resources/: dataDirGitIgnore.txt  local.keystore  logback.xml
src/test/resources/: compilation-failure.java.txt  logback-test.xml  no-startup-response.java.txt
(+195 files in other folders)
