[package]
#This name should always be set to app-runner-rust for rust projects until we can extract the project name from here
name = "app-runner-rust"
version = "0.1.0"
#authors = ["Craig Gallagher <github.cg@cgtracker.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"